--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -371,6 +371,16 @@ h1{
         width:auto;
         margin-right: 8px;
     }
+    
+    .my-img{
+    position: relative;
+    height: 20%;
+    width: 10%;
+    position: absolute;
+    top: 140%;
+    transform: translate(0%,-40%);
+    border-radius: 10%;
+}
 
 }
 
