--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -132,7 +132,7 @@ h1{
     border-top: 5px solid darkcyan;
     background-color: rgba(3, 37, 37, 0.651);
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 
 .my-img{
@@ -304,7 +304,7 @@ h1{
 
     .my-img{
         position: relative;
-        height: 40%;
+        height: 30%;
         width: 20%;
         position: absolute;
         top: 130%;
