--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -311,6 +311,17 @@ h1{
         transform: translate(20%,-40%);
         border-radius: 10%;
     }
+    
+    .my-img:hover{
+    opacity: 0.7;
+    height: 20%;
+    width: 20%;
+    position: absolute;
+    top: 140%;
+    transform: translate(20%,-40%);
+    border-radius: 10%;
+}
+
 
     .desc-body{
         margin-top:5%;
@@ -381,6 +392,16 @@ h1{
     transform: translate(20%,-40%);
     border-radius: 10%;
 }
+    .my-img:hover{
+    opacity: 0.7;
+    height: 15%;
+    width: 15%;
+    position: absolute;
+    top: 120%;
+    transform: translate(20%,-40%);
+    border-radius: 10%;
+}
+
 
 }
 
@@ -388,6 +409,16 @@ h1{
     
     .my-img{
     position: relative;
+    height: 20%;
+    width: 15%;
+    position: absolute;
+    top: 120%;
+    transform: translate(20%,-40%);
+    border-radius: 10%;
+}
+    
+    .my-img:hover{
+    opacity: 0.7;
     height: 20%;
     width: 15%;
     position: absolute;
@@ -424,6 +455,15 @@ h1{
     
     .my-img{
     position: relative;
+    height: 15%;
+    width: 15%;
+    position: absolute;
+    top: 120%;
+    transform: translate(20%,-40%);
+    border-radius: 10%;
+}
+    .my-img:hover{
+    opacity: 0.7;
     height: 15%;
     width: 15%;
     position: absolute;
