--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,7 +44,7 @@ header{
 
 .it-text-box{
     position: absolute;
-    width: auto;
+    width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
