--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -354,12 +354,18 @@ h1{
 
 }
 
-@media only screen and (min-width:870px) and (max-width:1000px){
+@media only screen and (min-width:870px) and (max-width:1100px){
     
       /* header starts  */
 
     .it-text-box{
         width: 100vw;
+    }
+    
+    .project-images li{
+    display: block;
+    width: 50%;
+    float: left;
     }
 
 
