--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -175,7 +175,7 @@ h1{
     margin-bottom: 5%;
     letter-spacing: 1px;
     word-spacing: 3px;
-    font-size: 300px;
+    font-size: 150%;
     font-weight: 300;
     color: rgb(12, 12, 12);
     text-align: justify;
@@ -322,7 +322,7 @@ h1{
         margin-right: 2%;
         letter-spacing: 1px;
         word-spacing: 2px;
-        font-size: 120%;
+        font-size: 150%;
         font-weight: 400;
         color: rgb(12, 12, 12);
         text-align: justify;
@@ -357,6 +357,18 @@ h1{
 @media only screen and (min-width:870px) and (max-width:1100px){
     
       /* header starts  */
+    
+    .desc-body{
+        margin-top:5%;
+        margin-bottom: 5%;
+        margin-right: 2%;
+        letter-spacing: 1px;
+        word-spacing: 2px;
+        font-size: 180%;
+        font-weight: 400;
+        color: rgb(12, 12, 12);
+        text-align: justify;
+    }
 
     .it-text-box{
         width: 100vw;
