--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -180,6 +180,40 @@ h1{
     color: rgb(12, 12, 12);
     text-align: justify;
 }
+    
+.progress-card{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.progress{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    justify-content: center;
+   }
+
+label{
+    color: black;
+    font-size: larger;
+    font-style: oblique;
+    font-weight: 100;
+    border-bottom: 2px solid black; 
+}
+
+.progress-detail{
+    width:50%;
+    height: 30px;
+    margin-left: 5%;
+    
+}
+.progress-detail:hover{
+    width:50%;
+    height: 30px;
+    margin-left: 5%;
+    background-color: whiteSmoke;
+    border-radius: 2px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25) inset;
+}
 
 
 
